[gd_scene load_steps=2 format=3 uid="uid://c5cvhuxvtw6ad"]

[ext_resource type="Script" uid="uid://bociv23oxgj2w" path="res://Scenes/UI/MenuPausa/GameDialog/game_dialog.gd" id="1_icvtt"]

[node name="GameDialog" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_icvtt")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ConfirmPanel" type="Panel" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/ConfirmPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/ConfirmPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 32
text = "Model"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/ConfirmPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
text = "Are you sure?"
horizontal_alignment = 1

[node name="ButtonOptions" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/ConfirmPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 32

[node name="YesAnswer" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/ConfirmPanel/VBoxContainer/ButtonOptions"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Yes"

[node name="NoAnswer" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/ConfirmPanel/VBoxContainer/ButtonOptions"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "No"
